--- a/apps/client/src/widgets/collections/table/index.css
+++ b/apps/client/src/widgets/collections/table/index.css
@@ -3,7 +3,6 @@
     position: relative;
     height: 100%;
     user-select: none;
-    padding: 0 5px 0 10px;
 
     .tabulator-tableholder {
         height: unset !important;
