--- a/apps/client/src/widgets/note_bars/CollectionProperties.css
+++ b/apps/client/src/widgets/note_bars/CollectionProperties.css
@@ -1,12 +1,11 @@
 .collection-properties {
-    padding: 0;
+    padding: 0.55em 12px;
     display: flex;
     gap: 0.25em;
     align-items: center;
     width: 100%;
     max-width: unset;
     font-size: 0.8em;
-    margin-bottom: 1em;
 
     .dropdown-menu {
         input.form-control {
@@ -30,10 +29,11 @@
 
     @media (max-width: 991px) {
         flex-wrap: wrap;
-        margin-bottom: 0.5em;
+        padding: 0.55em 1em;
 
         >div {
             flex-grow: 1;
+            justify-content: center;
         }
     }
 }
